[gd_scene format=3 uid="uid://cmaty8mp0psrf"]

[ext_resource type="Script" uid="uid://deyw3v4ckyw52" path="res://npc/characters/character.gd" id="1_2xp5l"]
[ext_resource type="Texture2D" uid="uid://di38l080thlo0" path="res://texture/Widow.png" id="2_10r7b"]
[ext_resource type="StyleBox" uid="uid://cgv7l1w2rh50j" path="res://player/balloon/balloon_style_box_flat.tres" id="2_254kf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wrr4h"]
atlas = ExtResource("2_10r7b")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c5v2"]
atlas = ExtResource("2_10r7b")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sps8d"]
atlas = ExtResource("2_10r7b")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnlbj"]
atlas = ExtResource("2_10r7b")
region = Rect2(64, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_n4lqr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrr4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c5v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sps8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnlbj")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2xp5l"]

[sub_resource type="LabelSettings" id="LabelSettings_wrr4h"]
font_size = 13

[sub_resource type="CircleShape2D" id="CircleShape2D_70vcc"]
radius = 213.00235

[sub_resource type="LabelSettings" id="LabelSettings_10r7b"]
line_spacing = 2.0
font_size = 9

[node name="Npc" type="StaticBody2D" unique_id=2019593617 groups=["npc"]]
z_index = 1
y_sort_enabled = true
collision_layer = 2
script = ExtResource("1_2xp5l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1297907898]
sprite_frames = SubResource("SpriteFrames_n4lqr")
animation = &"Idle"
autoplay = "Idle"
offset = Vector2(0, -17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1884413612]
position = Vector2(0, -5.995)
shape = SubResource("CircleShape2D_2xp5l")

[node name="ToInteractPressE" type="Label" parent="." unique_id=1138284165]
offset_left = 6.0
offset_top = 3.0
offset_right = 57.0
offset_bottom = 26.0
text = "E to talk"
label_settings = SubResource("LabelSettings_wrr4h")

[node name="Area2D" type="Area2D" parent="." unique_id=1913010803]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1756228922]
shape = SubResource("CircleShape2D_70vcc")

[node name="DialogueBubble" type="PanelContainer" parent="." unique_id=1911665489]
z_index = 2
offset_left = -54.0
offset_top = -59.0
offset_right = -21.0
offset_bottom = -42.0
theme_override_styles/panel = ExtResource("2_254kf")

[node name="MarginContainer" type="MarginContainer" parent="DialogueBubble" unique_id=432575397]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="DialogueLabel" type="Label" parent="DialogueBubble/MarginContainer" unique_id=2023079728]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_10r7b")

[node name="BubbleTimer" type="Timer" parent="." unique_id=1329971226]
wait_time = 3.0
one_shot = true
